# tensor-layouts

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analysis_api.md  generate_figures.py  layout_api.md  tensor_api.md  viz_api.md
examples/: algorithms.ipynb  applications.ipynb  composed.py  layouts.py  tensor.py  viz.ipynb  viz.py
src/layout_algebra/: __init__.py  atoms.py  atoms_amd.py  atoms_nv.py  layout_utils.py  layouts.py  tensor.py  viz.py
src/tensor_layouts/: __init__.py  analysis.py  atoms.py  atoms_amd.py  atoms_amx.py  atoms_nv.py  layout_utils.py  layouts.py  tensor.py  viz.py
tests/: analysis.py  external.py  layouts.py  oracle_amd.py  oracle_cute_cpp.py  oracle_nv.py  paper_examples.py  tensor.py  viz.py
