[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-layouts"
version = "0.2.1"
description = "Pure-Python GPU layout algebra for NVIDIA and AMD tensor core access patterns — no GPU required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jean-Luc Duprat" },
    { name = "Meta Platforms, Inc." },
]
keywords = ["cuda", "rocm", "gpu", "cutlass", "cute", "layout", "tensor-core", "nvidia", "amd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
test = ["pytest>=7.0"]
oracle-nv = ["nvidia-cutlass"]
oracle-amd = ["amd-matrix-instruction-calculator"]
dev = ["pytest>=7.0", "matplotlib>=3.5", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/facebookresearch/tensor-layouts"
Repository = "https://github.com/facebookresearch/tensor-layouts"
Issues = "https://github.com/facebookresearch/tensor-layouts/issues"

[tool.hatch.envs.default.scripts]
clean = "make clean"
test = "make test"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*.py" = ["F403", "F405", "E741"]
"examples/*" = ["E402", "F403", "F405", "F541"]
"src/tensor_layouts/analysis.py" = ["F403", "F405"]
"src/tensor_layouts/layout_utils.py" = ["F403", "F405"]
"src/tensor_layouts/tensor.py" = ["F403", "F405"]
"src/tensor_layouts/viz.py" = ["F403", "F405"]
